// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyReport renders a custom error message 1`] = `
<div
  className="emptyReport_3hmsj"
>
  <Toolbar
    extraButtons={Array []}
    filterBoxWidth="22em"
    handleNavFilter={[Function]}
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
    updateTimeDisplayFunc={[Function]}
    updateTreeViewFunc={[Function]}
  />
  <div
    style={
      Object {
        "display": "flex",
        "flex": "1",
        "overflowY": "auto",
      }
    }
  >
    <Message
      message="418 I'm a teapot"
    />
  </div>
</div>
`;

exports[`EmptyReport shallow renders and matches snapshot 1`] = `
<div
  className="emptyReport_3hmsj"
>
  <Toolbar
    extraButtons={Array []}
    filterBoxWidth="22em"
    handleNavFilter={[Function]}
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
    updateTimeDisplayFunc={[Function]}
    updateTreeViewFunc={[Function]}
  />
  <div
    style={
      Object {
        "display": "flex",
        "flex": "1",
        "overflowY": "auto",
      }
    }
  >
    <Message
      message="404: Page Not Found"
    />
  </div>
</div>
`;
